# fsm-extractor

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  xml_parser.rs
src/analysis/: cycles.rs  mod.rs  signatures.rs  stats.rs  validator.rs
src/fsm/: extractor.rs  function_block.rs  mod.rs  state.rs  transition.rs
src/output/: dot.rs  json.rs  markdown.rs  mod.rs  text.rs
