[package]
name = "plc-fsm-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
roxmltree = "0.21.1"
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.17"
petgraph = "0.8.3"
regex = "1.10"
chrono = { version = "0.4.42", features = ["serde"] }
tabled = "0.20.0"
indexmap = { version = "2.12.1", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"